<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>dev.struchkov.bot.gitlab</groupId>
    <artifactId>gitlab-bot</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>bot-context</module>
        <module>telegram-bot</module>
        <module>gitlab-sdk</module>
        <module>bot-core</module>
        <module>gitlab-app</module>
        <module>bot-data</module>
    </modules>

    <name>Parent GitLab Notify Bot</name>
    <description>Notifications about gitlab events in Telegram</description>
    <url>https://github.com/uPagge/gitlab-notification</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/uPagge/gitlab-notification/issues</url>
    </issueManagement>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <godfather.telegram.core.version>0.0.48-SNAPSHOT</godfather.telegram.core.version>

        <jakarta.persistance.version>3.1.0</jakarta.persistance.version>

        <google.guava.version>31.1-jre</google.guava.version>
        <jackson.databind.version>2.14.1</jackson.databind.version>
        <jackson.datatype.jsr310.version>2.14.1</jackson.datatype.jsr310.version>

        <plugin.maven.compiler.version>3.10.1</plugin.maven.compiler.version>
        <plugin.maven.release.ver>3.0.0-M7</plugin.maven.release.ver>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- модули проекта -->
            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>gitlab-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>telegram-bot</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-context</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>gitlab-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-data</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- /модули проекта -->
            <!-- haiti -->

            <dependency>
                <groupId>dev.struchkov.haiti.utils</groupId>
                <artifactId>haiti-utils-field-constants</artifactId>
                <version>0.0.6</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.haiti</groupId>
                <artifactId>haiti-utils</artifactId>
                <version>2.3.4</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.haiti</groupId>
                <artifactId>haiti-exception</artifactId>
                <version>2.3.4</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.haiti.filter</groupId>
                <artifactId>haiti-filter-criteria</artifactId>
                <version>0.0.5</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.godfather.telegram</groupId>
                <artifactId>telegram-consumer-simple</artifactId>
                <version>${godfather.telegram.core.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.godfather.telegram</groupId>
                <artifactId>telegram-core-simple</artifactId>
                <version>${godfather.telegram.core.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.godfather.telegram</groupId>
                <artifactId>telegram-sender-simple</artifactId>
                <version>${godfather.telegram.core.version}</version>
            </dependency>

            <!-- /SADTECH -->
            <!-- БД -->

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>${jakarta.persistance.version}</version>
            </dependency>

            <!-- /БД -->
            <!-- утилиты -->

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- /утилиты -->
            <!-- spring -->

            <!-- /spring -->
            <!-- http -->

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.databind.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.datatype.jsr310.version}</version>
            </dependency>
            <!-- /http -->

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${plugin.maven.compiler.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${plugin.maven.release.ver}</version>
                    <configuration>
                        <preparationGoals>clean compile</preparationGoals>
                        <goals>package</goals>
                        <tagNameFormat>v.@{project.version}</tagNameFormat>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <pushChanges>false</pushChanges>
                        <localCheckout>true</localCheckout>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>struchkov-nexus-release</id>
            <url>https://nexus.struchkov.dev/repository/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>struchkov-nexus-snapshot</id>
            <url>https://nexus.struchkov.dev/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>

    <developers>
        <developer>
            <id>uPagge</id>
            <name>Struchkov Mark</name>
            <email>mark@struchkov.dev</email>
            <url>https://mark.struchkov.dev</url>
        </developer>
    </developers>

</project>
